--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body {
+  background-color: rgb(241, 241, 241);
+}
+
+h1, h2, h3 {
+  color: rgb(13, 22, 97);
+}
+
+th {
+  text-decoration: underline;
+}
+
 li .to-do {
   color: red;
 }
